--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,600,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <script src="javascript/index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
-        <img src="" alt="Logo">
-        <ul>
+        <span id="logo">SweetKeys_</span>
+        <ul class="navitems ">
             <li><a href="">Keyboards</a></li>
             <li><a href="">Keycaps</a></li>
             <li><a href="">Switches</a></li>
             <li><a href="">Deskmats</a></li>
         </ul>
-        <ul class="icons">
-            <li><img src="" alt="account"></li>
-            <li><img src="" alt="cart"></li>
+        <ul class="navitems">
+            <li><img id="search" src="media/icons/search-icon.svg" alt="search"></li>
+            <li><img id="cart" src="media/icons/shopping-bag.svg" alt="cart"></li>
+            <li><img id="account" src="media/icons/account.svg" alt="account"></li>
         </ul>
     </div>
 
     <div class="news">
-        <h1>NEW SET AVAILABLE!</h1>
-        <p>LIMITED QUANTITIES</p>
-        <button type="button">BUY NOW!</button>
+        <h1 class="news-title">NEW SET AVAILABLE!</h1>
+        <p class="news-subtext">LIMITED QUANTITIES</p>
+        <button type="button" class="btn">BUY NOW!</button>
     </div>
 
     <div class="main">
