done main product section in homepage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navbar">
         <span id="logo">SweetKeys_</span>
-        <ul class="navitems ">
+        <ul class="navitems testing">
             <li><a href="">Keyboards</a></li>
             <li><a href="">Keycaps</a></li>
             <li><a href="">Switches</a></li>
@@ -36,33 +36,43 @@
 
     <div class="main">
         <div class="product">
-            <img src="" alt="product image">
-            <p class="description">Test</p>
-            <p class="price">10$</p>
+            <img src="media/products/gmk-olivia.webp" alt="product image">
+            <div class="product-info">
+                <p class="description">GMK OLIVIA</p>
+                <p class="price">10$</p>
+            </div>
         </div>
 
         <div class="product">
-            <img src="" alt="product image">
-            <p class="description">Test</p>
-            <p class="price">10$</p>
+            <img src="media/products/gmk-olivia.webp" alt="product image">
+            <div class="product-info">
+                <p class="description">GMK OLIVIA</p>
+                <p class="price">10$</p>
+            </div>
         </div>
 
         <div class="product">
-            <img src="" alt="product image">
-            <p class="description">Test</p>
-            <p class="price">10$</p>
+            <img src="media/products/gmk-olivia.webp" alt="product image">
+            <div class="product-info">
+                <p class="description">GMK OLIVIA</p>
+                <p class="price">10$</p>
+            </div>
         </div>
 
         <div class="product">
-            <img src="" alt="product image">
-            <p class="description">Test</p>
-            <p class="price">10$</p>
+            <img src="media/products/gmk-olivia.webp" alt="product image">
+            <div class="product-info">
+                <p class="description">GMK OLIVIA</p>
+                <p class="price">10$</p>
+            </div>
         </div>
 
         <div class="product">
-            <img src="" alt="product image">
-            <p class="description">Test</p>
-            <p class="price">10$</p>
+            <img src="media/products/gmk-olivia.webp" alt="product image">
+            <div class="product-info">
+                <p class="description">GMK OLIVIA</p>
+                <p class="price">100$</p>
+            </div>
         </div>
     </div>
 
