first version of homepage almost completed

--- a/index.html
+++ b/index.html
@@ -77,9 +77,30 @@
     </div>
 
     <div class="footer">
-        <div class="info">Company Informations</div>
-        <div class="faq">About Us</div>
-        <div class="socialmedia">Follow us on:</div>
+        <div class="location">
+            <h3 class="footer-title">SweetKeys_</h3>
+            <p>Via Raffaele Sanzio 2,<br>Rho 20017,<br>Lombardia,<br>Italia</p>
+        </div>
+
+        <div class="company-info">
+            <h3 class="footer-title">Informations</h3>
+            <ul class="info-list">
+                <li>About us</li>
+                <li>Refunds</li>
+                <li>FAQ</li>
+            </ul>
+        </div>
+        <div class="socialmedia">
+            <h3 class="footer-title">Follow us!</h3>
+            <ul class="socialmedia-list">
+                <li><img src="media/icons/instagram-icon.png" alt="instagram"></li>
+                <li><img src="media/icons/twitter-icon.png" alt="twitter"></li>
+                <li><img src="media/icons/youtube-icon.png" alt="youtube"></li>
+                <li><img src="media/icons/tiktok-icon.png" alt="tiktok"></li>
+                <li><img src="media/icons/discord-icon.png" alt="discord"></li>
+                <li><img src="media/icons/facebook-icon.png" alt="facebook"></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
