Added hover effect on navbar

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,600,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <script src="javascript/index.js" defer></script>
-    <title>Document</title>
+    <title>SweetKeys_</title>
 </head>
 <body>
     <div class="navbar">
         <span id="logo">SweetKeys_</span>
-        <ul class="navitems testing">
-            <li><a href="">Keyboards</a></li>
-            <li><a href="">Keycaps</a></li>
-            <li><a href="">Switches</a></li>
-            <li><a href="">Deskmats</a></li>
+        <ul class="navitems">
+            <li><a class="section" href="">Keyboards</a></li>
+            <li><a class="section" href="">Keycaps</a></li>
+            <li><a class="section" href="">Switches</a></li>
+            <li><a class="section" href="">Deskmats</a></li>
         </ul>
         <ul class="navitems">
             <li><img id="search" src="media/icons/search-icon.svg" alt="search"></li>
