Finished products page structure
git status

--- a/deskmats.html
+++ b/deskmats.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/style.css">
-
+    <link rel="stylesheet" href="stylesheets/deskmats.css">
     <!--Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
-
-    <script src="javascript/index.js" defer></script>
-    <title>SweetKeys_</title>
+    <title>Deskmats - SweetKeys_</title>
 </head>
 <body>
     <div class="navbar">
@@ -29,11 +27,11 @@
             <li><a href=""><img id="account" src="media/icons/account.svg" alt="account"></a></li>
         </ul>
     </div>
-
-    <div class="news">
-        <h1 class="news-title">NEW SET AVAILABLE!</h1>
-        <p class="news-subtext">LIMITED QUANTITIES</p>
-        <button type="button" class="btn">BUY NOW!</button>
+    
+    <div class="container">
+        <div class="header">
+            <h1 class="header-title">Deskmats</h1>
+        </div>
     </div>
 
     <div class="main">
