Made json interaction

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
 
     <script src="javascript/index.js" defer></script>
+    <script src="products.json" defer></script>
     <title>SweetKeys_</title>
 </head>
 <body>
@@ -37,7 +38,7 @@
     </div>
 
     <div class="main">
-        <a class="product" href="">
+        <!-- <a class="product" href="">
             <img src="media/products/gmk-olivia.webp" alt="product image">
             <div class="product-info">
                 <p class="description">GMK OLIVIA</p>
@@ -75,7 +76,7 @@
                 <p class="description">GMK OLIVIA</p>
                 <p class="price">100$</p>
             </div>
-        </a>
+        </a> -->
     </div>
 
     <div class="footer">
