added links to social and json interaction on product pages

--- a/deskmats.html
+++ b/deskmats.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
+
+    <script src="javascript/deskmats.js" defer></script>
     <title>Deskmats - SweetKeys_</title>
 </head>
 <body>
@@ -35,45 +37,6 @@
     </div>
 
     <div class="main">
-        <a class="product" href="">
-            <img src="media/products/gmk-olivia.webp" alt="product image">
-            <div class="product-info">
-                <p class="description">GMK OLIVIA</p>
-                <p class="price">10$</p>
-            </div>
-        </a>
-
-        <a class="product" href="">
-            <img src="media/products/gmk-olivia.webp" alt="product image">
-            <div class="product-info">
-                <p class="description">GMK OLIVIA</p>
-                <p class="price">10$</p>
-            </div>
-        </a>
-
-        <a class="product" href="">
-            <img src="media/products/gmk-olivia.webp" alt="product image">
-            <div class="product-info">
-                <p class="description">GMK OLIVIA</p>
-                <p class="price">10$</p>
-            </div>
-        </a>
-
-        <a class="product" href="">
-            <img src="media/products/gmk-olivia.webp" alt="product image">
-            <div class="product-info">
-                <p class="description">GMK OLIVIA</p>
-                <p class="price">10$</p>
-            </div>
-        </a>
-
-        <a class="product" href="">
-            <img src="media/products/gmk-olivia.webp" alt="product image">
-            <div class="product-info">
-                <p class="description">GMK OLIVIA</p>
-                <p class="price">100$</p>
-            </div>
-        </a>
     </div>
 
     <div class="footer">
@@ -93,12 +56,12 @@
         <div class="socialmedia">
             <h3 class="footer-title">Follow us!</h3>
             <ul class="socialmedia-list">
-                <li><a href=""><img src="media/icons/instagram-icon.png" alt="instagram"></a></li>
-                <li><a href=""><img src="media/icons/twitter-icon.png" alt="twitter"></a></li>
-                <li><a href=""><img src="media/icons/youtube-icon.png" alt="youtube"></a></li>
-                <li><a href=""><img src="media/icons/tiktok-icon.png" alt="tiktok"></a></li>
-                <li><a href=""><img src="media/icons/discord-icon.png" alt="discord"></a></li>
-                <li><a href=""><img src="media/icons/facebook-icon.png" alt="facebook"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="media/icons/instagram-icon.png" alt="instagram"></a></li>
+                <li><a href="https://twitter.com/"><img src="media/icons/twitter-icon.png" alt="twitter"></a></li>
+                <li><a href="https://www.youtube.com/"><img src="media/icons/youtube-icon.png" alt="youtube"></a></li>
+                <li><a href="https://www.tiktok.com/"><img src="media/icons/tiktok-icon.png" alt="tiktok"></a></li>
+                <li><a href="https://www.discord.com/"><img src="media/icons/discord-icon.png" alt="discord"></a></li>
+                <li><a href="https://www.facebook.com/"><img src="media/icons/facebook-icon.png" alt="facebook"></a></li>
             </ul>
         </div>
     </div>
