set up of cart interaction

--- a/items/olivia.html
+++ b/items/olivia.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
+
+    <script src="/javascript/cart.js" defer></script>
     <title>SweetKeys_</title>
 </head>
 <body>
@@ -37,7 +39,7 @@
             <div class="status">IN STOCK</div>
             <p class="description">This set is the third release of this fan favorite keycaps set!<br>Made by Olivia herself, now available until july 2023!</p>
             <input id="quantity" type="number" min="1" value="1">
-            <button id="buy" onclick="">ADD TO CART</button>
+            <button id="buy" onclick="addToCart('olivia')">ADD TO CART</button>
         </div>
     </div>
 
