--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
 
     <!--Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,22 +12,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
 
     <script src="javascript/index.js" defer></script>
-    <script src="products.json" defer></script>
     <title>SweetKeys_</title>
 </head>
 <body>
     <div class="navbar">
-        <a id="logo" href="/index.html">SweetKeys_</a>
+        <a id="logo" href="index.html">SweetKeys_</a>
         <ul class="navitems">
-            <li><a class="section" href="/keyboards.html">Keyboards</a></li>
-            <li><a class="section" href="/keycaps.html">Keycaps</a></li>
-            <li><a class="section" href="/switches.html">Switches</a></li>
-            <li><a class="section" href="/deskmats.html">Deskmats</a></li>
+            <li><a class="section" href="keyboards.html">Keyboards</a></li>
+            <li><a class="section" href="keycaps.html">Keycaps</a></li>
+            <li><a class="section" href="switches.html">Switches</a></li>
+            <li><a class="section" href="deskmats.html">Deskmats</a></li>
         </ul>
         <ul class="navitems">
             <!-- <li><img id="search" src="media/icons/search-icon.svg" alt="search"></li> -->
-            <li><a href=""><img id="cart" src="/media/icons/shopping-bag.svg" alt="cart"></a></li>
-            <li><a href=""><img id="account" src="/media/icons/account.svg" alt="account"></a></li>
+            <li><a href=""><img id="cart" src="media/icons/shopping-bag.svg" alt="cart"></a></li>
+            <li><a href=""><img id="account" src="media/icons/account.svg" alt="account"></a></li>
         </ul>
     </div>
 
