--- a/items/olivia.html
+++ b/items/olivia.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="/stylesheets/productpage.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/productpage.css">
 
     <!--Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
 
-    <script src="/javascript/addCart.js" defer></script>
+    <script src="../javascript/addCart.js" defer></script>
     <title>SweetKeys_</title>
 </head>
 <body>
     <div class="navbar">
-        <a id="logo" href="/index.html">SweetKeys_</a>
+        <a id="logo" href="../index.html">SweetKeys_</a>
         <ul class="navitems">
-            <li><a class="section" href="/keyboards.html">Keyboards</a></li>
-            <li><a class="section" href="/keycaps.html">Keycaps</a></li>
-            <li><a class="section" href="/switches.html">Switches</a></li>
-            <li><a class="section" href="/deskmats.html">Deskmats</a></li>
+            <li><a class="section" href="../keyboards.html">Keyboards</a></li>
+            <li><a class="section" href="../keycaps.html">Keycaps</a></li>
+            <li><a class="section" href="../switches.html">Switches</a></li>
+            <li><a class="section" href="../deskmats.html">Deskmats</a></li>
         </ul>
         <ul class="navitems">
             <!-- <li><img id="search" src="media/icons/search-icon.svg" alt="search"></li> -->
-            <li><a href="/cart.html"><img id="cart" src="/media/icons/shopping-bag.svg" alt="cart"></a></li>
+            <li><a href="../cart.html"><img id="cart" src="../media/icons/shopping-bag.svg" alt="cart"></a></li>
             <!-- <li><a href=""><img id="account" src="/media/icons/account.svg" alt="account"></a></li> -->
         </ul>
     </div>
 
     <div class="product-page">
-        <img src="/media/products/gmk-olivia.webp" alt="GMK OLIVIA">
+        <img src="../media/products/gmk-olivia.webp" alt="GMK OLIVIA">
         <div>
             <h1 class="title">GMK OLIVIA</h1>
             <h3 class="subtitle">ABS Double-Shot Keycaps</h3>
@@ -60,12 +60,12 @@
         <div class="socialmedia">
             <h3 class="footer-title">Follow us!</h3>
             <ul class="socialmedia-list">
-                <li><a href="https://www.instagram.com/"><img src="/media/icons/instagram-icon.png" alt="instagram"></a></li>
-                <li><a href="https://twitter.com/"><img src="/media/icons/twitter-icon.png" alt="twitter"></a></li>
-                <li><a href="https://www.youtube.com/"><img src="/media/icons/youtube-icon.png" alt="youtube"></a></li>
-                <li><a href="https://www.tiktok.com/"><img src="/media/icons/tiktok-icon.png" alt="tiktok"></a></li>
-                <li><a href="https://www.discord.com/"><img src="/media/icons/discord-icon.png" alt="discord"></a></li>
-                <li><a href="https://www.facebook.com/"><img src="/media/icons/facebook-icon.png" alt="facebook"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="../media/icons/instagram-icon.png" alt="instagram"></a></li>
+                <li><a href="https://twitter.com/"><img src="../media/icons/twitter-icon.png" alt="twitter"></a></li>
+                <li><a href="https://www.youtube.com/"><img src="../media/icons/youtube-icon.png" alt="youtube"></a></li>
+                <li><a href="https://www.tiktok.com/"><img src="../media/icons/tiktok-icon.png" alt="tiktok"></a></li>
+                <li><a href="https://www.discord.com/"><img src="../media/icons/discord-icon.png" alt="discord"></a></li>
+                <li><a href="https://www.facebook.com/"><img src="../media/icons/facebook-icon.png" alt="facebook"></a></li>
             </ul>
         </div>
     </div>
