--- a/items/olivia.html
+++ b/items/olivia.html
@@ -37,9 +37,10 @@
             <h1 class="title">GMK OLIVIA</h1>
             <h3 class="subtitle">ABS Double-Shot Keycaps</h3>
             <div class="status">IN STOCK</div>
+            <div class="pricing">$130</div>
             <p class="description">This set is the third release of this fan favorite keycaps set!<br>Made by Olivia herself, now available until july 2023!</p>
             <input id="quantity" type="number" min="1" value="1">
-            <button id="buy" onclick="addToCart('olivia')">ADD TO CART</button>
+            <button class="btn" onclick="addToCart('olivia')">ADD TO CART</button>
         </div>
     </div>
 
