Finished cart interactions

--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
         </ul>
         <ul class="navitems">
             <!-- <li><img id="search" src="media/icons/search-icon.svg" alt="search"></li> -->
-            <li><a href=""><img id="cart" src="media/icons/shopping-bag.svg" alt="cart"></a></li>
+            <li><a href="cart.html"><img id="cart" src="media/icons/shopping-bag.svg" alt="cart"></a></li>
             <!-- <li><a href=""><img id="account" src="/media/icons/account.svg" alt="account"></a></li> -->
         </ul>
     </div>
@@ -47,9 +47,9 @@
         </div>
 
         <div class="interactions">
-            <button class="btn">CONTINUE SHOPPING</button>
-            <button class="btn" onclick="updateQuantities()">UPDATE</button>
-            <button class="btn">CHECK OUT</button>
+            <button class="btn" onclick="toHomePage()">CONTINUE SHOPPING</button>
+            <button class="btn" onclick="updateCart()">UPDATE</button>
+            <button class="btn" onclick="sendOrder()">CHECK OUT</button>
         </div>
 
     </div>
