--- a/switches.html
+++ b/switches.html
@@ -25,8 +25,8 @@
         </ul>
         <ul class="navitems">
             <!-- <li><img id="search" src="media/icons/search-icon.svg" alt="search"></li> -->
-            <li><a href=""><img id="cart" src="media/icons/shopping-bag.svg" alt="cart"></a></li>
-            <li><a href=""><img id="account" src="media/icons/account.svg" alt="account"></a></li>
+            <li><a href="cart.html"><img id="cart" src="media/icons/shopping-bag.svg" alt="cart"></a></li>
+            <!-- <li><a href=""><img id="account" src="media/icons/account.svg" alt="account"></a></li> -->
         </ul>
     </div>
     
