removed trash icon

--- a/cart.html
+++ b/cart.html
@@ -35,7 +35,7 @@
         <h1 id="cart-title">Your Cart</h1>
         <div class="cart-info">
             <h3 id="product-voice">Product</h3>
-            <h3 id="remove-voice">Remove</h3>
+            <!-- <h3 id="remove-voice">Remove</h3> -->
             <h3 id="price-voice">Price</h3>
             <h3 id="quantity-voice">Quantity</h3>
             <h3 id="total-voice">Subtotal</h3>
