first version completed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="news">
         <h1 class="news-title">NEW SET AVAILABLE!</h1>
         <p class="news-subtext">LIMITED QUANTITIES</p>
-        <button type="button" class="btn">BUY NOW!</button>
+        <button type="button" onclick="location.assign('items/olivia.html')" class="btn">BUY NOW!</button>
     </div>
 
     <div class="main">
