--- a/deskmats.html
+++ b/deskmats.html
@@ -25,7 +25,7 @@
         </ul>
         <ul class="navitems">
             <!-- <li><img id="search" src="media/icons/search-icon.svg" alt="search"></li> -->
-            <li><a href="../cart.html"><img id="cart" src="../media/icons/shopping-bag.svg" alt="cart"></a></li>
+            <li><a href="cart.html"><img id="cart" src="media/icons/shopping-bag.svg" alt="cart"></a></li>
             <!-- <li><a href=""><img id="account" src="media/icons/account.svg" alt="account"></a></li> -->
         </ul>
     </div>
