modified some products descriptions

--- a/items/koboglacier.html
+++ b/items/koboglacier.html
@@ -38,7 +38,7 @@
             <h3 class="subtitle">Plastic Keyboard</h3>
             <div class="status">IN STOCK</div>
             <div class="pricing">$200</div>
-            <p class="description">Brr, it's getting cold here.<br>Maybe it's this keyboard fault.</p>
+            <p class="description">Brr, it's getting cold here.<br>Maybe it's this keyboard's fault.</p>
             <input id="quantity" type="number" min="1" value="1">
             <button class="btn" onclick="addToCart('glacier')">ADD TO CART</button>
         </div>
