--- a/items/kobovoc.html
+++ b/items/kobovoc.html
@@ -37,7 +37,7 @@
             <h3 class="subtitle">Plastic Keyboard</h3>
             <div class="status">IN STOCK</div>
             <div class="pricing">$200</div>
-            <p class="description">This elegant look it's perfect for who seeks class<br>Limited time edition!</p>
+            <p class="description">Elegant look for elegant people.<br>Limited time edition!</p>
             <input id="quantity" type="number" min="1" value="1">
             <button class="btn" onclick="addToCart('voc')">ADD TO CART</button>
         </div>
