--- a/items/frightclub.html
+++ b/items/frightclub.html
@@ -38,7 +38,7 @@
             <h3 class="subtitle">Large Deskmat</h3>
             <div class="status">IN STOCK</div>
             <div class="pricing">$35</div>
-            <p class="description">Only for those who seek a misterious look.<br>I'm feeling observed...</p>
+            <p class="description">There's something misterious about this deskmat.<br>I'm feeling observed...</p>
             <input id="quantity" type="number" min="1" value="1">
             <button class="btn" onclick="addToCart('fright')">ADD TO CART</button>
         </div>
