--- a/cart.html
+++ b/cart.html
@@ -74,7 +74,7 @@
             <ul class="socialmedia-list">
                 <li><a href="https://www.instagram.com/"><img src="media/icons/instagram-icon.png" alt="instagram"></a></li>
                 <li><a href="https://twitter.com/"><img src="media/icons/twitter-icon.png" alt="twitter"></a></li>
-                <li><a href="https://www.youtube.com/"><img src="media/icons/youtube-icon.png" alt="youtube"></a></li>
+                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="media/icons/youtube-icon.png" alt="youtube"></a></li>
                 <li><a href="https://www.tiktok.com/"><img src="media/icons/tiktok-icon.png" alt="tiktok"></a></li>
                 <li><a href="https://www.discord.com/"><img src="media/icons/discord-icon.png" alt="discord"></a></li>
                 <li><a href="https://www.facebook.com/"><img src="media/icons/facebook-icon.png" alt="facebook"></a></li>
